--- a/style.css
+++ b/style.css
@@ -1,38 +1,36 @@
 * {
-    background-color: #f7f7f7;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
 }
 
-h2,
-p {
-    background-color: white;
+body{
+background-color: #d6d2d2;
+display: grid;
+justify-items: center;
+gap: 60px;
+margin-top: 60px;
 }
 
 header {
     /* border: 5px solid black; */
     height: auto;
     display: flex;
+    gap: 60px;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 
 }
 
-.title {
 
-    display: block;
-    margin-block: 60px;
-    font-weight: 900;
-    font-size: 20px;
-
-}
 
 .nav {
     display: flex;
     gap: 20px;
-    margin-top: 10px;
+    flex-wrap: wrap;
+    justify-content: center;
+    /* margin-top: 10px; */
 
 
 }
@@ -40,19 +38,15 @@ header {
 .nav-menu {
     background-color: white;
     padding: 15px 25px;
-    margin-bottom: 65px;
+    
     border-radius: 10px;
     cursor: pointer;
-
-
-
 }
 
 a {
     text-decoration: none;
     color: black;
     font-weight: 600;
-
 }
 
 /* main */
@@ -64,11 +58,14 @@ a {
 
 main {
     max-width: 1000px;
-    /* border: 3px solid black; */
-    margin: 0 auto;
+    
+    border-radius: 30px;
+    background-color: blue;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 400px 1fr;
+    grid-template-rows: 380px 1fr;
+    
+    position: relative;
 
 }
 
@@ -78,26 +75,36 @@ main {
     align-items: flex-end;
     justify-content: center;
     text-align: end;
-    padding: 25px 35px;
+    padding: 40px;
+    
+    gap:20px;
     background-color: white;
 
+}
+.borda-red{
+    background-color: #ee2211;
+    width: 80px;
+    height: 5px;
+    position: absolute;
+    top:5%;
+    left: 46%;
 }
 
 .info-1 h2 {
     font-size: 35px;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
 }
 
 
 p {
     font-size: 20px;
-    font-weight: 550;
+    
 }
 
 button {
     background-color: #ee2211;
     color: white;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     padding: 15px 26px;
     font-size: 16px;
     border: none;
@@ -111,62 +118,62 @@ button {
     display: grid;
     align-items: center;
     /* border: 2px solid blue; */
+    
+    color: #000000;
+    
+    background-color: #d6d2d2;
+}
+
+.vantagens h3{
     font-size: 64px;
-    color: #c6c6c6;
-    padding-right: 15px;
-    background-color: #f7f7f7;
+    padding: 40px;
 }
 
 .info-2 {
 
     /* border: 3px solid red; */
     display: grid;
-    padding: 10px;
-    padding-top: 30px;
+    padding: 30px;
+    
 
     background-color: white;
 
 }
 
 .info-item {
-    /* border: 3px solid green; */
-
-
     display: grid;
-    grid-template-columns: 1fr 8fr;
-    align-items: center;
-    margin: 20px 20px;
-    column-gap: 15px;
+    grid-template-columns: auto 1fr;
+    /* align-items: center; */
+    margin: 20px;
+    column-gap: 20px;
+    row-gap:10px;
     background-color: white;
-
-
-
 }
 
 .info-item p {
     grid-column: 2;
-    margin-block: 10px;
+    font-size: 20px;
+    font-weight: 100;
 }
 
 .info-item h2 {
-    font-size: 26px;
+    font-size: 18.72px;
 }
-
-img {
-    /* border: 2px solid blue; */
+img{
     justify-self: end;
-
-
+    
 }
 
 footer {
-    display: grid;
+    /* display: grid; */
     grid-template-rows: 100px;
-    grid-column: 1fr;
+    padding: 40px;
+    text-align: center;
+    width: 100%;
     /* border: 5px solid black; */
     justify-items: center;
     align-items: center;
-    margin-top: 50px;
+    box-sizing: border-box;
     background-color: white;
 
 }
