--- a/style.css
+++ b/style.css
@@ -1,15 +1,22 @@
+:root{
+    font-size: 62.5%;
+}
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 body{
-background-color: #d6d2d2;
+font-size: 1.6rem;
+background-color: #f8f6f6;
 display: grid;
 justify-items: center;
 gap: 60px;
 margin-top: 60px;
+box-sizing: border-box;
 }
 
 header {
@@ -23,25 +30,28 @@ header {
 
 }
 
+.logo{
+    width: 13.6rem;
+    height: 3.2rem;
+}
 
-
-.nav {
+.menu {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
     justify-content: center;
-    /* margin-top: 10px; */
-
-
+    list-style: none;
 }
 
-.nav-menu {
-    background-color: white;
-    padding: 15px 25px;
+.menu-item {
+    background-color: rgb(255, 255, 255);
+    padding: 1.5rem 2.5rem;
     
     border-radius: 10px;
-    cursor: pointer;
+    /* cursor: pointer; */
 }
+
+
 
 a {
     text-decoration: none;
@@ -57,13 +67,11 @@ a {
 }
 
 main {
-    max-width: 1000px;
-    
+    max-width: 100.0rem;
     border-radius: 30px;
-    background-color: blue;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 380px 1fr;
+    grid-template-rows: 38.0rem 1fr;
     
     position: relative;
 
@@ -77,40 +85,43 @@ main {
     text-align: end;
     padding: 40px;
     
-    gap:20px;
+    gap:2.0rem;
     background-color: white;
 
 }
-.borda-red{
+.bike-image::before{
+    content: "";
     background-color: #ee2211;
-    width: 80px;
-    height: 5px;
+    width: 8.0rem;
+    height: 0.5rem;
     position: absolute;
     top:5%;
     left: 46%;
 }
 
 .info-1 h2 {
-    font-size: 35px;
+    font-size: 3.5rem;
     /* margin-bottom: 20px; */
 }
 
 
 p {
-    font-size: 20px;
-    
+    font-size: 2.0rem;
 }
 
 button {
     background-color: #ee2211;
     color: white;
     /* margin-top: 20px; */
-    padding: 15px 26px;
-    font-size: 16px;
+    padding: 1.5rem 2.6rem;
+    font-size: 1.6rem;
     border: none;
     font-weight: 500;
     border-radius: 6px;
     cursor: pointer;
+}
+button:hover{
+    background-color: #900;
 }
 
 .vantagens {
@@ -121,43 +132,49 @@ button {
     
     color: #000000;
     
-    background-color: #d6d2d2;
+    background-color: #f8f6f6;
 }
 
 .vantagens h3{
-    font-size: 64px;
+    font-size: 6.4rem;
     padding: 40px;
+    background-image: url("/img/onda.svg");
 }
 
 .info-2 {
-
-    /* border: 3px solid red; */
     display: grid;
     padding: 30px;
-    
-
     background-color: white;
-
 }
+
 
 .info-item {
     display: grid;
     grid-template-columns: auto 1fr;
     /* align-items: center; */
-    margin: 20px;
-    column-gap: 20px;
-    row-gap:10px;
-    background-color: white;
+    padding: 2.0rem;
+    column-gap: 2.0rem;
+    row-gap:1.0rem;
+    background-color: rgb(255, 255, 255);
+    
+}
+.info-item:hover{
+    border-left: 4px solid red;
+    transition: all ease;
+    
 }
 
 .info-item p {
     grid-column: 2;
-    font-size: 20px;
+    font-size: 2.0rem;
     font-weight: 100;
 }
 
 .info-item h2 {
-    font-size: 18.72px;
+    font-size: 1.872rem;
+}
+.info-2 .info-item:nth-child(odd){
+    background-color: #f8f6f6;
 }
 img{
     justify-self: end;
@@ -176,4 +193,9 @@ footer {
     box-sizing: border-box;
     background-color: white;
 
+}
+
+
+a:hover{
+    border: 1px solid red;
 }
