--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-:root{
+:root {
     font-size: 62.5%;
 }
 
@@ -6,17 +6,16 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
     padding: 0px;
-    box-sizing: border-box;
 }
 
-body{
-font-size: 1.6rem;
-background-color: #f8f6f6;
-display: grid;
-justify-items: center;
-gap: 60px;
-margin-top: 60px;
-box-sizing: border-box;
+body {
+    font-size: 1.6rem;
+    background-color: #f8f6f6;
+    display: grid;
+    justify-items: center;
+    gap: 60px;
+    margin-top: 60px;
+
 }
 
 header {
@@ -28,9 +27,10 @@ header {
     align-items: center;
     justify-content: space-between;
 
+
 }
 
-.logo{
+.logo {
     width: 13.6rem;
     height: 3.2rem;
 }
@@ -46,17 +46,17 @@ header {
 .menu-item {
     background-color: rgb(255, 255, 255);
     padding: 1.5rem 2.5rem;
-    
+    box-sizing: content-box;
     border-radius: 10px;
     /* cursor: pointer; */
 }
-
-
 
 a {
     text-decoration: none;
     color: black;
     font-weight: 600;
+    border: 2px solid transparent;
+
 }
 
 /* main */
@@ -64,18 +64,20 @@ a {
 .image {
     width: 100%;
     height: 100%;
+
 }
 
-main {
-    max-width: 100.0rem;
+.conteudo {
+    max-width: 100rem;
     border-radius: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 38.0rem 1fr;
-    
+
     position: relative;
 
 }
+
 
 .info-1 {
     display: flex;
@@ -84,18 +86,19 @@ main {
     justify-content: center;
     text-align: end;
     padding: 40px;
-    
-    gap:2.0rem;
+
+    gap: 2.0rem;
     background-color: white;
 
 }
-.bike-image::before{
+
+.bike-image::before {
     content: "";
     background-color: #ee2211;
     width: 8.0rem;
     height: 0.5rem;
     position: absolute;
-    top:5%;
+    top: 8%;
     left: 46%;
 }
 
@@ -120,7 +123,8 @@ button {
     border-radius: 6px;
     cursor: pointer;
 }
-button:hover{
+
+button:hover {
     background-color: #900;
 }
 
@@ -129,13 +133,13 @@ button:hover{
     display: grid;
     align-items: center;
     /* border: 2px solid blue; */
-    
+
     color: #000000;
-    
+
     background-color: #f8f6f6;
 }
 
-.vantagens h3{
+.vantagens h3 {
     font-size: 6.4rem;
     padding: 40px;
     background-image: url("/img/onda.svg");
@@ -154,14 +158,15 @@ button:hover{
     /* align-items: center; */
     padding: 2.0rem;
     column-gap: 2.0rem;
-    row-gap:1.0rem;
+    row-gap: 1.0rem;
     background-color: rgb(255, 255, 255);
-    
+
 }
-.info-item:hover{
+
+.info-item:hover {
     border-left: 4px solid red;
     transition: all ease;
-    
+
 }
 
 .info-item p {
@@ -173,12 +178,14 @@ button:hover{
 .info-item h2 {
     font-size: 1.872rem;
 }
-.info-2 .info-item:nth-child(odd){
+
+.info-item:nth-child(odd) {
     background-color: #f8f6f6;
 }
-img{
+
+img {
     justify-self: end;
-    
+
 }
 
 footer {
@@ -196,6 +203,7 @@ footer {
 }
 
 
-a:hover{
-    border: 1px solid red;
+a:hover {
+    border: 2px solid red;
+
 }
