--- a/style.css
+++ b/style.css
@@ -148,8 +148,7 @@ button:hover {
 
 .info-2 {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
-    margin: 30px;
+    padding: 30px;
     background-color: white;
 }
 
