--- a/style.css
+++ b/style.css
@@ -27,6 +27,7 @@ header {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    box-sizing: border-box;
 
 
 }
@@ -35,12 +36,12 @@ header {
     width: 13.6rem;
     height: 3.2rem;
 }
-
 .menu {
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     list-style: none;
 }
 
@@ -49,16 +50,14 @@ header {
     padding: 1.5rem 2.5rem;
     box-sizing: content-box;
     border-radius: 10px;
-    /* cursor: pointer; */
-}
-
-a {
     text-decoration: none;
     color: black;
     font-weight: 600;
     border: 2px solid transparent;
-
+    display: block;
+    /* cursor: pointer; */
 }
+
 
 /* main */
 
@@ -73,12 +72,12 @@ a {
 }
 
 
+
 .info-1 {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: center;
-    text-align: end;
     padding: 40px;
 
     gap: 2.0rem;
@@ -98,9 +97,10 @@ a {
 }
 
 .image {
-    width: 50%;
-    height: 50%;
-
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top right;
 }
 
 .info-1 h2 {
@@ -119,6 +119,7 @@ button {
     /* margin-top: 20px; */
     padding: 1.5rem 2.6rem;
     font-size: 1.6rem;
+    
     border: none;
     font-weight: 500;
     border-radius: 6px;
@@ -136,14 +137,16 @@ button:hover {
     /* border: 2px solid blue; */
 
     color: #000000;
-
+    overflow-wrap: break-word;
     background-color: #f8f6f6;
 }
 
 .vantagens h3 {
+   
     font-size: 6.4rem;
     padding: 40px;
     background-image: url("/img/onda.svg");
+
 }
 
 .info-2 {
@@ -207,4 +210,54 @@ footer {
 a:hover {
     border: 2px solid red;
 
+}
+
+/* media */
+
+@media (max-width:950px)
+{
+    .bike-image::before{
+        content: none;
+    }
+    button{
+        padding: 1.2rem 7.0rem;
+    }
+    .conteudo{
+        grid-template-columns:  minmax(400px, 1fr);
+        justify-content: center;
+        margin: 20px;
+    }
+    .info-1{
+        align-items: center;
+
+    }
+    
+        
+    
+    /* .info-1 p{
+        max-width: 400px;
+        color: blue;
+        
+    } */
+    /* .info-1 h1{
+        color: blue;
+    } */
+}
+
+@media (max-width:570px)
+{
+    .menu{
+        flex-direction:column;
+        flex-wrap: none ;
+    }
+    .menu-item{
+        padding: 2rem 8rem;
+        border: 4px solid #000000 ;
+        
+    }
+    h3{
+        overflow-wrap:break-word;
+        color: red;
+        border: 5px solid black;
+    }
 }
